# python-app-project-template

./: README.md  cookiecutter.json
{{cookiecutter.application_name}}/: Dockerfile  README.md  docker-entrypoint.sh  invoke.yaml  pyproject.toml  setup.cfg  setup.sh  tasks.py
{{cookiecutter.application_name}}/kube/: 01-config.yaml
{{cookiecutter.application_name}}/kube/merge-templates/: 01-config.yaml
{{cookiecutter.application_name}}/kube/override-templates/: 01-config.yaml
