[tool.poetry]
name = "{{cookiecutter.package_name}}"
version = "0.1.0"
description = "{{cookiecutter.description}}"
authors = [""]

[tool.poetry.dependencies]
python = "{{cookiecutter.python_version}}"
invoke = "^1.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
mypy = "^0.761"
pytest = "^5.3.5"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
